// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hash_part.sql > line 15 1`] = `
[
  "SELECT satisfies_hash_partition(0, 4, 0, NULL)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "A_Const": {
                            "ival": {},
                            "location": 32,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 4,
                            },
                            "location": 35,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {},
                            "location": 38,
                          },
                        },
                        {
                          "A_Const": {
                            "isnull": true,
                            "location": 41,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "satisfies_hash_partition",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_part.sql > line 55 1`] = `
[
  "SELECT satisfies_hash_partition('mchash'::regclass, 2, 1,
								variadic array[1,2]::int[])",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 32,
                                "sval": {
                                  "sval": "mchash",
                                },
                              },
                            },
                            "location": 40,
                            "typeName": {
                              "location": 42,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 2,
                            },
                            "location": 52,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 1,
                            },
                            "location": 55,
                          },
                        },
                        {
                          "TypeCast": {
                            "arg": {
                              "A_ArrayExpr": {
                                "elements": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 1,
                                      },
                                      "location": 81,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 2,
                                      },
                                      "location": 83,
                                    },
                                  },
                                ],
                                "location": 75,
                              },
                            },
                            "location": 85,
                            "typeName": {
                              "arrayBounds": [
                                {
                                  "Integer": {},
                                },
                              ],
                              "location": 87,
                              "names": [
                                {
                                  "String": {
                                    "sval": "pg_catalog",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "int4",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                      "func_variadic": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "satisfies_hash_partition",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_part.sql > line 59 1`] = `
[
  "CREATE TABLE mcinthash (a int, b int, c jsonb)
  PARTITION BY HASH (a part_test_int4_ops, b part_test_int4_ops)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 49,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 68,
                    "name": "a",
                    "opclass": [
                      {
                        "String": {
                          "sval": "part_test_int4_ops",
                        },
                      },
                    ],
                  },
                },
                {
                  "PartitionElem": {
                    "location": 90,
                    "name": "b",
                    "opclass": [
                      {
                        "String": {
                          "sval": "part_test_int4_ops",
                        },
                      },
                    ],
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_HASH",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "mcinthash",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 24,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 31,
                  "typeName": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "c",
                  "is_local": true,
                  "location": 38,
                  "typeName": {
                    "location": 40,
                    "names": [
                      {
                        "String": {
                          "sval": "jsonb",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_part.sql > line 63 1`] = `
[
  "SELECT satisfies_hash_partition('mcinthash'::regclass, 4, 0,
								variadic array[0, 0])",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 32,
                                "sval": {
                                  "sval": "mcinthash",
                                },
                              },
                            },
                            "location": 43,
                            "typeName": {
                              "location": 45,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 4,
                            },
                            "location": 55,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {},
                            "location": 58,
                          },
                        },
                        {
                          "A_ArrayExpr": {
                            "elements": [
                              {
                                "A_Const": {
                                  "ival": {},
                                  "location": 84,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {},
                                  "location": 87,
                                },
                              },
                            ],
                            "location": 78,
                          },
                        },
                      ],
                      "func_variadic": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "satisfies_hash_partition",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_part.sql > line 75 1`] = `
[
  "SELECT satisfies_hash_partition('mcinthash'::regclass, 4, 0,
								variadic array[now(), now()])",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "A_Const": {
                                "location": 32,
                                "sval": {
                                  "sval": "mcinthash",
                                },
                              },
                            },
                            "location": 43,
                            "typeName": {
                              "location": 45,
                              "names": [
                                {
                                  "String": {
                                    "sval": "regclass",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 4,
                            },
                            "location": 55,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {},
                            "location": 58,
                          },
                        },
                        {
                          "A_ArrayExpr": {
                            "elements": [
                              {
                                "FuncCall": {
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "now",
                                      },
                                    },
                                  ],
                                  "location": 84,
                                },
                              },
                              {
                                "FuncCall": {
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "now",
                                      },
                                    },
                                  ],
                                  "location": 91,
                                },
                              },
                            ],
                            "location": 78,
                          },
                        },
                      ],
                      "func_variadic": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "satisfies_hash_partition",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_part.sql > line 79 1`] = `
[
  "create table text_hashp (a text) partition by hash (a)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 33,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 52,
                    "name": "a",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_HASH",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "text_hashp",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 27,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_part.sql > line 84 1`] = `
[
  "select satisfies_hash_partition('text_hashp'::regclass, 2, 0, 'xxx'::text) OR
	   satisfies_hash_partition('text_hashp'::regclass, 2, 1, 'xxx'::text) AS satisfies",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "satisfies",
                  "val": {
                    "BoolExpr": {
                      "args": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "location": 32,
                                      "sval": {
                                        "sval": "text_hashp",
                                      },
                                    },
                                  },
                                  "location": 44,
                                  "typeName": {
                                    "location": 46,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "regclass",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 2,
                                  },
                                  "location": 56,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {},
                                  "location": 59,
                                },
                              },
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "location": 62,
                                      "sval": {
                                        "sval": "xxx",
                                      },
                                    },
                                  },
                                  "location": 67,
                                  "typeName": {
                                    "location": 69,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "text",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "satisfies_hash_partition",
                                },
                              },
                            ],
                            "location": 7,
                          },
                        },
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "location": 107,
                                      "sval": {
                                        "sval": "text_hashp",
                                      },
                                    },
                                  },
                                  "location": 119,
                                  "typeName": {
                                    "location": 121,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "regclass",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 2,
                                  },
                                  "location": 131,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1,
                                  },
                                  "location": 134,
                                },
                              },
                              {
                                "TypeCast": {
                                  "arg": {
                                    "A_Const": {
                                      "location": 137,
                                      "sval": {
                                        "sval": "xxx",
                                      },
                                    },
                                  },
                                  "location": 142,
                                  "typeName": {
                                    "location": 144,
                                    "names": [
                                      {
                                        "String": {
                                          "sval": "text",
                                        },
                                      },
                                    ],
                                    "typemod": -1,
                                  },
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "satisfies_hash_partition",
                                },
                              },
                            ],
                            "location": 82,
                          },
                        },
                      ],
                      "boolop": "OR_EXPR",
                      "location": 75,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`hash_part.sql > line 88 1`] = `
[
  "DROP TABLE mchash",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "mchash",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
